--- a/infra/jenkinsfile
+++ b/infra/jenkinsfile
@@ -3,7 +3,6 @@ pipeline {
 
     environment {
         AWS_CREDENTIALS = credentials('aws-credentials')
-        GIT_CREDENTIALS = credentials('git-credentials')
     }
 
     stages {
@@ -12,9 +11,7 @@ pipeline {
                 script {
                     def tools = ['terraform', 'ansible', 'aws']
                     tools.each { tool ->
-                        if (sh(script: "${tool} --version", returnStatus: true) != 0) {
-                            error "${tool} is not installed or not in PATH"
-                        }
+                        sh "which ${tool} || (echo '${tool} not found' && exit 1)"
                     }
                     echo "All required tools are installed"
                 }
@@ -23,24 +20,16 @@ pipeline {
 
         stage('Checkout Code') {
             steps {
-                git branch: 'main', 
-                    url: 'https://github.com/Meriem1601/CTAMA-Automation-DevSecOps.git', 
-                    credentialsId: 'git-credentials'
+                checkout scm
             }
         }
 
         stage('Terraform Init and Apply') {
             steps {
                 dir('infra') {
-                    withAWS(credentials: 'aws-credentials') {
-                        script {
-                            try {
-                                sh 'terraform init'
-                                sh 'terraform apply -auto-approve'
-                            } catch (Exception e) {
-                                error "Terraform failed: ${e.getMessage()}"
-                            }
-                        }
+                    withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'aws-credentials']]) {
+                        sh 'terraform init'
+                        sh 'terraform apply -auto-approve'
                     }
                 }
             }
@@ -49,14 +38,8 @@ pipeline {
         stage('Run Ansible Playbook') {
             steps {
                 dir('infra') {
-                    withAWS(credentials: 'aws-credentials') {
-                        script {
-                            try {
-                                sh 'ansible-playbook -i hosts playbook.yml'
-                            } catch (Exception e) {
-                                error "Ansible playbook failed: ${e.getMessage()}"
-                            }
-                        }
+                    withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'aws-credentials']]) {
+                        sh 'ansible-playbook -i hosts playbook.yml'
                     }
                 }
             }
@@ -65,18 +48,7 @@ pipeline {
         stage('Verify Deployment') {
             steps {
                 dir('infra') {
-                    script {
-                        try {
-                            def nodes = sh(script: 'kubectl get nodes --kubeconfig=/home/ubuntu/.kube/config -o json', returnStdout: true)
-                            def nodeCount = readJSON(text: nodes).items.size()
-                            echo "Kubernetes cluster has ${nodeCount} nodes"
-                            if (nodeCount < 2) {
-                                error "Expected at least 2 nodes, but found ${nodeCount}"
-                            }
-                        } catch (Exception e) {
-                            error "Failed to verify deployment: ${e.getMessage()}"
-                        }
-                    }
+                    sh 'kubectl get nodes --kubeconfig=/home/ubuntu/.kube/config'
                 }
             }
         }
