--- a/jenkinsfiles/dev/Build-CI/jenkinsfile
+++ b/jenkinsfiles/dev/Build-CI/jenkinsfile
@@ -100,21 +100,21 @@ pipeline {
                 }
             }
         }
-        stage('OWASP Dependency-Check Vulnerabilities') {
-            steps {
-                dependencyCheck additionalArguments: ''' 
-                    -o './' 
-                    -s './' 
-                    -f 'ALL' 
-                    --prettyPrint 
-                    --enableExperimental 
-                    --noupdate 
-                    --format HTML,XML,JSON
-                ''', odcInstallation: 'OWASP Dependency-Check Vulnerabilities'
+        // stage('OWASP Dependency-Check Vulnerabilities') {
+        //     steps {
+        //         dependencyCheck additionalArguments: ''' 
+        //             -o '.reports/' 
+        //             -s './' 
+        //             -f 'ALL' 
+        //             --prettyPrint 
+        //             --enableExperimental 
+        //             --noupdate 
+        //             --format HTML,XML,JSON
+        //         ''', odcInstallation: 'OWASP Dependency-Check Vulnerabilities'
 
-                dependencyCheckPublisher pattern: 'dependency-check-report.xml'
-            }
-        }
+        //         dependencyCheckPublisher pattern: 'dependency-check-report.xml'
+        //     }
+        // }
         stage('Build Docker Image') {
             steps {
                 script {
