--- a/jenkinsfiles/dev/Build-CI/jenkinsfile
+++ b/jenkinsfiles/dev/Build-CI/jenkinsfile
@@ -2,188 +2,228 @@ pipeline {
     agent {
         label 'EC2-Agent'
     }
+    
     environment {
+        // AWS Variables
         AWS_REGION = 'eu-north-1'
         ECR_REPOSITORY_NAME = 'ctama-devsecops-images'
-        IMAGE_TAG = 'v1.2.0-build' // Update to your preferred image tag
         ECR_REPOSITORY_URI = "211125488393.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPOSITORY_NAME}"
+        
+        // GitHub Container Registry Variables
+        GHCR_REGISTRY = 'ghcr.io'
+        GITHUB_USERNAME = 'meriem1601'
+        REPO_NAME = 'ctama-automation-devsecops'
+        IMAGE_NAME = 'myapp'
+        
+        // Version and tag variables
+        APP_VERSION = 'v1.2.0'
+        BUILD_TAG = "${APP_VERSION}-${BUILD_NUMBER}"
+        
+        // GHCR full image name
+        GHCR_IMAGE = "${GHCR_REGISTRY}/${GITHUB_USERNAME}/${REPO_NAME}"
+        
+        // Database Variables
         MYSQL_DATABASE = 'mydatabase'
+        
+        // Node environment
+        NODE_ENV = 'production'
     }
+    
+    options {
+        timeout(time: 1, unit: 'HOURS')
+        disableConcurrentBuilds()
+        ansiColor('xterm')
+    }
+    
     stages {
-        stage('Start MySQL') {
+        stage('Checkout') {
+            steps {
+                cleanWs()
+                checkout scm
+            }
+        }
+        
+        stage('Install Dependencies') {
             steps {
                 script {
                     try {
-                        // Check if MySQL is already running
-                        def mysqlStatus = sh(
-                            script: "docker ps -f name=mysql --format '{{.Names}}'",
-                            returnStdout: true
-                        ).trim()
-
-                        if (mysqlStatus == 'mysql') {
-                            echo "MySQL container is already running."
-                        } else {
-                            // Start MySQL in Docker
-                            sh """
-                                docker run --name mysql -e MYSQL_ROOT_PASSWORD=root -p 3306:3306 -d mysql:latest
-                                echo "Waiting for MySQL to be ready..."
-                                until docker exec mysql mysqladmin ping -h 127.0.0.1 --silent; do
-                                    echo "MySQL is not ready, waiting..."
-                                    sleep 3
-                                done
-                                echo "MySQL is ready to accept connections."
-                            """
-                        }
+                        sh 'npm ci'
                     } catch (Exception e) {
-                        error "Starting MySQL container failed: ${e.message}"
+                        error "Failed to install dependencies: ${e.message}"
                     }
                 }
             }
         }
+        
+        stage('Run Tests') {
+            steps {
+                script {
+                    try {
+                        sh 'npm test'
+                    } catch (Exception e) {
+                        error "Tests failed: ${e.message}"
+                    }
+                }
+            }
+        }
+        
+        stage('Start MySQL') {
+            steps {
+                script {
+                    try {
+                        def mysqlStatus = sh(script: "docker ps -f name=mysql --format '{{.Names}}'", returnStdout: true).trim()
+                        if (mysqlStatus != 'mysql') {
+                            sh '''
+                                docker run --name mysql -e MYSQL_ROOT_PASSWORD=root -p 3306:3306 -d mysql:latest
+                                echo "Waiting for MySQL to be ready..."
+                                for i in $(seq 1 30); do
+                                    if docker exec mysql mysqladmin ping -h localhost -u root -proot --silent; then
+                                        echo "MySQL is ready"
+                                        break
+                                    fi
+                                    echo "Waiting for MySQL to be ready... $i/30"
+                                    sleep 2
+                                done
+                            '''
+                        }
+                    } catch (Exception e) {
+                        error "MySQL setup failed: ${e.message}"
+                    }
+                }
+            }
+        }
+        
         stage('Initialize Database') {
             steps {
                 script {
                     try {
-                        // Check if the database already exists
-                        def dbExists = sh(
-                            script: "docker exec mysql mysql -uroot -proot -e 'SHOW DATABASES LIKE \"${MYSQL_DATABASE}\";'",
-                            returnStdout: true
-                        ).trim()
-
-                        if (!dbExists) {
-                            // Create the database if it doesn't exist
-                            sh """
-                                docker exec mysql mysql -uroot -proot -e "CREATE DATABASE ${MYSQL_DATABASE};"
-                                echo "Database ${MYSQL_DATABASE} initialized."
-                            """
-                        } else {
-                            echo "Database ${MYSQL_DATABASE} already exists. Skipping creation."
-                        }
+                        sh """
+                            docker exec mysql mysql -uroot -proot -e 'CREATE DATABASE IF NOT EXISTS ${MYSQL_DATABASE};'
+                        """
                     } catch (Exception e) {
                         error "Database initialization failed: ${e.message}"
                     }
                 }
             }
         }
-        stage('Build Application') {
-            steps {
-                script {
-                    try {
-                        // Install dependencies
-                        sh 'npm install'
-
-                        // Start the application in the background
-                        sh 'nohup npm start &'
-                        echo "Application is running successfully."
-                    } catch (Exception e) {
-                        error "Application build or start failed: ${e.message}"
+        
+        stage('Security Checks') {
+            parallel {
+                stage('SonarQube Analysis') {
+                    steps {
+                        script {
+                            sh """
+                                sonar-scanner \
+                                  -Dsonar.projectKey=CTAMA-Automation-DevSecOps \
+                                  -Dsonar.sources=. \
+                                  -Dsonar.host.url=http://16.16.118.25:9000 \
+                                  -Dsonar.token=sqp_8f9c8b21d8f7065aa3e059f4ba0a739af3760009
+                            """
+                        }
+                    }
+                }
+                
+                stage('OWASP Dependency Check') {
+                    steps {
+                        script {
+                            sh '''
+                                dependency-check.sh --scan . \
+                                    --format JSON --format HTML --prettyPrint \
+                                    --suppressionFile suppress.xml \
+                                    --out dependency-check-report
+                            '''
+                        }
+                    }
+                    post {
+                        always {
+                            publishHTML(target: [
+                                allowMissing: false,
+                                alwaysLinkToLastBuild: true,
+                                keepAll: true,
+                                reportDir: '.',
+                                reportFiles: 'dependency-check-report.html',
+                                reportName: 'Dependency Check Report'
+                            ])
+                        }
                     }
                 }
             }
         }
-        stage('SonarQube - SAST') {
+        
+        stage('Build and Push to GHCR') {
             steps {
                 script {
-                    try {
-                        // Run SonarQube analysis
+                    withCredentials([string(credentialsId: 'github-token', variable: 'GITHUB_TOKEN')]) {
                         sh """
-                            sonar-scanner \
-                              -Dsonar.projectKey=CTAMA-Automation-DevSecOps \
-                              -Dsonar.sources=. \
-                              -Dsonar.host.url=http://16.16.118.25:9000 \
-                              -Dsonar.token=sqp_8f9c8b21d8f7065aa3e059f4ba0a739af3760009
+                            echo \${GITHUB_TOKEN} | docker login ${GHCR_REGISTRY} -u ${GITHUB_USERNAME} --password-stdin
+                            
+                            echo "Building Docker image..."
+                            docker build -t ${IMAGE_NAME}:latest .
+                            
+                            echo "Tagging Docker image..."
+                            docker tag ${IMAGE_NAME}:latest ${GHCR_IMAGE}:latest
+                            docker tag ${IMAGE_NAME}:latest ${GHCR_IMAGE}:${BUILD_TAG}
+                            
+                            echo "Pushing to GitHub Packages..."
+                            docker push ${GHCR_IMAGE}:latest
+                            docker push ${GHCR_IMAGE}:${BUILD_TAG}
                         """
-                        echo "SonarQube analysis completed successfully."
-                    } catch (Exception e) {
-                        error "SonarQube analysis failed: ${e.message}"
                     }
                 }
             }
         }
-        stage('Build Docker Image') {
+        
+        stage('Trivy Scan GHCR Image') {
             steps {
                 script {
-                    try {
-                        // Build Docker image
-                        sh "docker build -t my-node-app:${IMAGE_TAG} ."
-                        echo "Docker build completed successfully."
-                    } catch (Exception e) {
-                        error "Docker build failed: ${e.message}"
-                    }
+                    sh """
+                        trivy image --no-progress --format template \
+                            --template '@/contrib/html.tpl' \
+                            --output trivy-report.html ${GHCR_IMAGE}:latest
+                    """
+                }
+            }
+            post {
+                always {
+                    publishHTML(target: [
+                        allowMissing: false,
+                        alwaysLinkToLastBuild: true,
+                        keepAll: true,
+                        reportDir: '.',
+                        reportFiles: 'trivy-report.html',
+                        reportName: 'Trivy Scan Report'
+                    ])
                 }
             }
         }
-        stage('Trivy Scan') {
-            steps {
-                script {
-                    try {
-                        // Scan the Docker image with Trivy
-                        def scanResult = sh(
-                            script: "trivy image --exit-code 1 --severity HIGH,CRITICAL --format json --output trivy-report.json my-node-app:${IMAGE_TAG}",
-                            returnStatus: true
-                        )
-
-                        if (scanResult == 0) {
-                            echo "Trivy scan completed with no high or critical vulnerabilities."
-                        } else {
-                            error "Trivy scan found high or critical vulnerabilities. Please check the report in trivy-report.json."
-                        }
-                    } catch (Exception e) {
-                        error "Trivy scan failed: ${e.message}"
-                    }
-                }
-            }
-        }
-        stage('Authenticate Docker to ECR') {
+        
+        stage('Push to ECR') {
             steps {
                 withCredentials([aws(credentialsId: 'aws-credentials')]) {
                     script {
-                        try {
-                            // Authenticate Docker to ECR
-                            sh "aws ecr get-login-password --region ${AWS_REGION} | docker login --username AWS --password-stdin ${ECR_REPOSITORY_URI}"
-                            echo "Docker authenticated to ECR successfully."
-                        } catch (Exception e) {
-                            error "Docker login to ECR failed: ${e.message}"
-                        }
-                    }
-                }
-            }
-        }
-        stage('Tag and Push Image to ECR') {
-            steps {
-                withCredentials([aws(credentialsId: 'aws-credentials')]) {
-                    script {
-                        try {
-                            // Tag the Docker image
-                            sh "docker tag my-node-app:${IMAGE_TAG} ${ECR_REPOSITORY_URI}:${IMAGE_TAG}"
-
-                            // Check if the image already exists in ECR
-                            def describeResult = sh(
-                                script: "aws ecr describe-images --repository-name ${ECR_REPOSITORY_NAME} --image-ids imageTag=${IMAGE_TAG} --region ${AWS_REGION}",
-                                returnStatus: true
-                            )
-
-                            // Push the Docker image to ECR if it does not exist
-                            if (describeResult != 0) {
-                                sh "docker push ${ECR_REPOSITORY_URI}:${IMAGE_TAG}"
-                                echo "Docker image ${ECR_REPOSITORY_URI}:${IMAGE_TAG} pushed successfully."
-                            } else {
-                                echo "Image ${ECR_REPOSITORY_URI}:${IMAGE_TAG} already exists. Skipping push."
-                            }
-                        } catch (Exception e) {
-                            error "Tagging or pushing image failed: ${e.message}"
-                        }
+                        sh """
+                            aws ecr get-login-password --region ${AWS_REGION} | docker login --username AWS --password-stdin ${ECR_REPOSITORY_URI}
+                            docker tag ${GHCR_IMAGE}:latest ${ECR_REPOSITORY_URI}:latest
+                            docker tag ${GHCR_IMAGE}:${BUILD_TAG} ${ECR_REPOSITORY_URI}:${BUILD_TAG}
+                            docker push ${ECR_REPOSITORY_URI}:latest
+                            docker push ${ECR_REPOSITORY_URI}:${BUILD_TAG}
+                        """
                     }
                 }
             }
         }
     }
+    
     post {
-        failure {
-            echo 'CI Pipeline failed. Please check the logs for details.'
+        always {
+            cleanWs()
+            sh 'docker system prune -f'
         }
         success {
-            echo 'CI Pipeline succeeded.'
+            echo "Pipeline completed successfully!"
+        }
+        failure {
+            echo "Pipeline failed. Please check the logs for details."
         }
     }
 }
